# voxeliens

./: CMakeLists.txt  Changelog.txt  Credits.txt  Install.rst  Issues.txt  License.txt  Readme.rst  Readme.txt  voxeliens.desktop.in
audio/music/: License.html
code/: CMakeLists.txt
code/cmake/modules/: FindBullet.cmake  FindOGREBullet.cmake
code/include/: Config.h  FixedShadowCameraSetup.h  GameScreen.h  HighScoreScreen.h  KeyBindingDialog.h  Keyboard.h  MainMenuScreen.h  Mouse.h  MusicPlayer.h  PausedScreen.h  PlayScreen.h  SettingsDialog.h  TankWarsApplication.h  TankWarsViewWidget.h  TerrainGeneration.h  Text3D.h
code/source/: Config.cpp  FixedShadowCameraSetup.cpp  GameScreen.cpp  HighScoreScreen.cpp  KeyBindingDialog.cpp  Keyboard.cpp  MainMenuScreen.cpp  Mouse.cpp  MusicPlayer.cpp  PausedScreen.cpp  PlayScreen.cpp  SettingsDialog.cpp  TankWarsApplication.cpp  TankWarsViewWidget.cpp  TerrainGeneration.cpp  Text3D.cpp  main.cpp
code/ui/: KeyBindingDialog.ui  SettingsDialog.ui
dependencies/polyvox/: CMakeLists.txt
dependencies/thermite3d/: CMakeLists.txt  cmake_command.txt  plugins.cfg.in  plugins_d.cfg.in  qt.conf  settings.ini
dependencies/thermite3d/cmake/modules/: FindOGRE.cmake
dependencies/thermite3d/doc/: Manual.docx  ResourceTypes.vsd
dependencies/thermite3d/include/: AbstractSettingsWidget.h  Application.h  DataStreamWrapper.h  FPSDialog.h  GraphicsSettingsWidget.h  OgreGpuCommandBufferFlush.h  OgreWidget.h  QtForwardDeclarations.h  QtOgreForwardDeclarations.h  Screen.h  SettingsDialog.h  SurfacePatchRenderable.h  ThermiteForwardDeclarations.h  Utility.h  ViewWidget.h  VolumeSerializationProgressListenerImpl.h
dependencies/thermite3d/include/Logging/: Log.h  LogEntry.h  LogLevel.h  LogManager.h  LogModel.h  LogModelSortFilterProxy.h
dependencies/thermite3d/include/Resources/: QStringIODevice.h  TextManager.h  TextResource.h  VolumeManager.h  VolumeResource.h
dependencies/thermite3d/include/Tasks/: AmbientOcclusionTask.h  FindPathTask.h  SurfaceMeshDecimationTask.h  SurfaceMeshExtractionTask.h  Task.h  TaskProcessorThread.h
dependencies/thermite3d/include/scriptable/: Camera.h  Component.h  Entity.h  Globals.h  Light.h  Object.h  RenderComponent.h  SkyBox.h  Volume.h
dependencies/thermite3d/resources/: resources.qrc
dependencies/thermite3d/resources/Ogre/debug/Axis/: Axis.material  Axis.mesh
dependencies/thermite3d/resources/Qt/: ThermiteResources.qrc
dependencies/thermite3d/resources/Qt/animations/: thermite_logo.mng
dependencies/thermite3d/source/: AbstractSettingsWidget.cpp  Application.cpp  DataStreamWrapper.cpp  FPSDialog.cpp  GraphicsSettingsWidget.cpp  OgreGpuCommandBufferFlush.cpp  OgreWidget.cpp  SettingsDialog.cpp  SurfacePatchRenderable.cpp  Utility.cpp  ViewWidget.cpp  VolumeSerializationProgressListenerImpl.cpp
dependencies/thermite3d/source/Logging/: Log.cpp  LogEntry.cpp  LogManager.cpp  LogModel.cpp  LogModelSortFilterProxy.cpp
dependencies/thermite3d/source/Resources/: QStringIODevice.cpp  TextManager.cpp  TextResource.cpp  VolumeManager.cpp  VolumeResource.cpp
dependencies/thermite3d/source/scriptable/: Camera.cpp  Component.cpp  Entity.cpp  Globals.cpp  Light.cpp  Object.cpp  RenderComponent.cpp  SkyBox.cpp  Volume.cpp
dependencies/thermite3d/source/tasks/: AmbientOcclusionTask.cpp  FindPathTask.cpp  SurfaceMeshDecimationTask.cpp  SurfaceMeshExtractionTask.cpp  Task.cpp  TaskProcessorThread.cpp
dependencies/thermite3d/ui/: FPSDialog.ui  GraphicsSettingsWidget.ui  Log.ui  SettingsDialog.ui
manual/: Manual.docx
materials/Dialog/: Dialog.material
materials/ShadowCaster/: ShadowCaster.hlsl  ShadowCaster.material  ShadowCaster.program  ShadowCasterFP.glsl  ShadowCasterVP.glsl
materials/Skies/SpaceScapeBluePurple/: SpaceScapeBluePurple.material
materials/VoxelMaterial/: ColouredCubicVoxel.cg  ColouredCubicVoxel.glsl  ColouredCubicVoxel.hlsl  ColouredCubicVoxel.material  ColouredCubicVoxel.program
materials/VoxelMaterial/Fireball/: Fireball.material  Fireball.program  FireballBig.material  FireballBig.program  FireballBigVP.glsl  FireballBigVP.hlsl  FireballVP.glsl  FireballVP.hlsl
materials/VoxelMaterial/Mesh/: Mesh.material  Mesh.program  MeshVP.cg  MeshVP.glsl
materials/VoxelMaterial/PolyVox/: PolyVox.material  PolyVoxVP.cg  PolyVoxVP.glsl  PolyVoxVP.program
models/: BluePowerUp.blend  BluePowerUp.mesh  CyanCube.blend  CyanCube.mesh  CyanMissile.blend  CyanMissile.mesh  CyanPowerUp.blend  CyanPowerUp.mesh  Enemy0.blend  Enemy0.mesh  Enemy1.blend  Enemy1.mesh  Enemy2.blend  Enemy2.mesh  Enemy3.blend  Enemy3.mesh  Enemy4.blend  Enemy4.mesh  GameOver.blend  GameOver.mesh  Icosphere5.blend  Icosphere5.mesh  NewEnemy0.blend  NewEnemy0.mesh  NewEnemy1.blend  NewEnemy1.mesh  NewEnemy2.blend  NewEnemy2.mesh  NewEnemy3.blend  NewEnemy3.mesh  NewEnemy4.blend  NewEnemy4.mesh  NewEnemy5.blend  NewEnemy5.mesh  OrangeCube.blend  OrangeCube.mesh  OrangeMissile.blend  OrangeMissile.mesh  OrangePowerUp.blend  OrangePowerUp.mesh  (+20 more)
models/Chars/: 0.blend  0.mesh  1.blend  1.mesh  2.blend  2.mesh  3.blend  3.mesh  4.blend  4.mesh  5.blend  5.mesh  6.blend  6.mesh  7.blend  7.mesh  8.blend  8.mesh  9.blend  9.mesh  A.blend  A.mesh  B.blend  B.mesh  C.blend  C.mesh  Colon.mesh  D.blend  D.mesh  E.blend  E.mesh  ExclamationMark.blend  ExclamationMark.mesh  F.blend  F.mesh  G.blend  G.mesh  H.blend  H.mesh  I.blend  (+39 more)
volumes/: level0.vol  level1.vol  level2.vol  level3.vol  level4.vol  level5.vol  level6.vol  level7.vol  level8.vol
voxels/: Cactus1.csv  Cactus2.csv  Enemy2.csv  Enemy3.csv  Enemy4.csv  Enemy5.csv  LandedShip1.csv  LandingPad.csv  NewEnemy0.csv  NewEnemy1.csv  NewEnemy2.csv  NewEnemy3.csv  NewEnemy4.csv  NewEnemy5.csv  OakTree0.csv  OakTree1.csv  OakTree2.csv  OakTree3.csv  OakTree4.csv  OakTree5.csv  OakTree6.csv  OakTree7.csv  OakTree8.csv  OakTree9.csv  PalmTree1.csv  PalmTree2.csv  PalmTree3.csv  PineTree.csv  PineTree2.csv  SatalliteDish.csv  Shed.csv  UmbrellaTower.csv
